--- a/index.css
+++ b/index.css
@@ -2,13 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   
+    color: white;
 }
 
 a{
     text-decoration: none;
     color: white;
 }
+
+/* ===KEYFRAMES=== */
 @keyframes flutuando{
      0%{
         transform: translate(-100px, -20px);
@@ -72,7 +74,6 @@ a{
 /*fim navecação*/
 
 /* HOME */
-
 .home{
     height: 100vh;
     width: 100%;
@@ -82,7 +83,7 @@ a{
     background-image: url(raverna.png);
     background-repeat: no-repeat;
     background-position: center;
-    background-color: black;
+    background-color: #040109;
 }
 
 .projetos{
@@ -117,34 +118,76 @@ a{
     transform: translate(-100px, -20px);
     animation: flutuando 2s ease-in-out infinite;
 }
+/* FIM HOME */
 
-.box{
-    width: 500px;
-    height: 299px;
-    position: relative;
-
-}
-.box-foto2{
-    width: 180px;
-    height: 200px;
-    left: 50%;
-    top: 50%;
-    position: absolute;
-    transform: translate(-50%,-50%);
-
-
-}
-.circulo{
-    height: 100%;
+/* SOBRE */
+.sobre{
+    height: 100vh;
     width: 100%;
     background: black;
-    border-radius: 8px;
     display: flex;
+    flex-direction: column;
     align-items: center;
-    clip-path: circle(129px);
 }
-.circulo:hover ~ img  {
-    left: calc(100%-100px);
-    width: 299px;
-    height: 299px;
+
+.sobre-titulo{
+    width: 100%;
+    height: 10vh;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.sobre-titulo h2{
+    color: white;
+    text-align: center;
+    font-size: 30pt;
+    text-transform: uppercase;
+}
+
+.linha{
+    width: 70px;
+    height: 4px;
+    background: white;
+}
+
+.sobre-content{
+    
+}
+
+.left{
+    float: left;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 500px;
+    height: 450px;
+}
+
+.left img{
+    width: 500px;
+
+}
+
+.right{
+    float: right;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 500px;
+    height: 450px;
+    margin-left: 100px;
+}
+
+.right h2{
+    transform: translateY(100px);
+    font-size: 30pt;
+}
+
+.right p{
+    margin-top: 225px;
 }
