--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,233 @@
-@charset "UTF-8";
-@impor * {
+.navegacao-principal .menu-fixo {
+  position: fixed;
+  width: 100%;
+  height: 8vh;
+}
+
+.navegacao-principal .menu-fixo .navegacao-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 8vh;
+  background: #2a1421;
+  color: white;
+}
+
+.navegacao-principal .menu-fixo .navegacao-container .navegacao-container-foto {
+  height: 75px;
+  border-radius: 40px;
+  margin-right: 15vw;
+  font-size: 20pt;
+}
+
+.navegacao-principal .menu-fixo .navegacao-container .navegacao-container-foto:hover {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
+  -webkit-transition: 1s;
+  transition: 1s;
+  cursor: pointer;
+}
+
+.navegacao-principal .menu-fixo .navegacao-container .nave-intens {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.navegacao-principal .menu-fixo .navegacao-container .nave-intens li {
+  margin-left: 30px;
+  font-size: 17pt;
+}
+
+.navegacao-principal .menu-fixo .navegacao-container .nave-intens li:hover {
+  border-bottom: 5px solid deepskyblue;
+}
+
+.sobre {
+  height: 100vh;
+  width: 100%;
+  background: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sobre .sobre-titulo {
+  width: 100%;
+  height: 10vh;
+  margin-top: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.sobre .sobre-titulo h2 {
+  color: white;
+  text-align: center;
+  font-size: 30pt;
+  text-transform: uppercase;
+}
+
+.sobre .sobre-titulo .linha {
+  width: 70px;
+  height: 4px;
+  background: white;
+}
+
+.sobre .sobre-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.sobre .sobre-content .left {
+  float: left;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 500px;
+  height: 450px;
+}
+
+.sobre .sobre-content .left img {
+  width: 500px;
+}
+
+.sobre .sobre-content .right {
+  float: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 500px;
+  height: 450px;
+  margin-left: 100px;
+}
+
+.sobre .sobre-content .right h2 {
+  -webkit-transform: translateY(100px);
+          transform: translateY(100px);
+  font-size: 30pt;
+}
+
+.sobre .sobre-content .right p {
+  margin-top: 225px;
+}
+
+.home {
+  height: 100vh;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  background-image: url(../../imgs/raverna.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #040109;
+}
+
+.home .btn {
+  background: transparent;
+  height: 40px;
+  width: 140px;
+  border: 1px solid white;
+  -webkit-box-shadow: #0d1c4a;
+          box-shadow: #0d1c4a;
+  font-family: 'Sarala', sans-serif;
+  font-size: 24px;
+  font-weight: 400px;
+  color: azure;
+  -webkit-transform: translateY(-100px);
+          transform: translateY(-100px);
+}
+
+.home .btn:hover {
+  background: #16005c;
+  -webkit-transition: 0,5s;
+  transition: 0,5s;
+}
+
+.home .fa-angle-down {
+  font-size: 60pt;
+  color: white;
+  -webkit-transform: translate(-100px, -20px);
+          transform: translate(-100px, -20px);
+  -webkit-animation: flutuando 2s ease-in-out infinite;
+          animation: flutuando 2s ease-in-out infinite;
+}
+
+@media (max-width: 1120px) {
+  .left, .right {
+    float: none;
+    margin: 0 50px 0 50px;
+  }
+  .sobre-content {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .sobre {
+    height: 129vh;
+  }
+}
+
+* {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
@@ -42,199 +270,9 @@ a {
   }
 }
 
-/* navegação */
-.menu-fixo {
-  position: fixed;
-  width: 100%;
-  height: 8vh;
-}
-
-.navegacao-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 8vh;
-  background: #2a1421;
-  color: white;
-}
-
-.navegacao-container-foto {
-  height: 75px;
-  border-radius: 40px;
-  margin-right: 15vw;
-}
-
-.nave-intens {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.nave-intens li {
-  margin-left: 30px;
-  font-size: 17pt;
-}
-
-.nave-intens li:hover {
-  border-bottom: 5px solid deepskyblue;
-}
-
-.navegacao-container-foto {
-  font-size: 20pt;
-}
-
-.navegacao-container-foto:hover:hover {
-  -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
-  -webkit-transition: 1s;
-  transition: 1s;
-  cursor: pointer;
-}
-
-/*fim navecação*/
-/* SOBRE */
-.sobre {
-  height: 100vh;
-  width: 100%;
-  background: black;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.sobre-titulo {
-  width: 100%;
-  height: 10vh;
-  margin-top: 100px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.sobre-titulo h2 {
-  color: white;
-  text-align: center;
-  font-size: 30pt;
-  text-transform: uppercase;
-}
-
-.linha {
-  width: 70px;
-  height: 4px;
-  background: white;
-}
-
-.sobre-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.left {
-  float: left;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 500px;
-  height: 450px;
-}
-
-.left img {
-  width: 500px;
-}
-
-.right {
-  float: right;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 500px;
-  height: 450px;
-  margin-left: 100px;
-}
-
-.right h2 {
-  -webkit-transform: translateY(100px);
-          transform: translateY(100px);
-  font-size: 30pt;
-}
-
-.right p {
-  margin-top: 225px;
-}
-
-/* ===== FIM SOBRE ===== */
 /* ===== CONTATO ===== */
 .contato {
   height: 100vh;
   width: 100%;
-}
-
-/* ===== FIM CONTATO ===== */
-/* MEDIA QUER */
-@media (max-width: 1120px) {
-  .left, .right {
-    float: none;
-    margin: 0 50px 0 50px;
-  }
-  .sobre-content {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .sobre {
-    height: 129vh;
-  }
 }
 /*# sourceMappingURL=style.css.map */
