--- a/css/layout/_home.scss
+++ b/css/layout/_home.scss
@@ -11,8 +11,14 @@ $layout-name: "home";
     background-position: center;
     background-color: #040109;
 
-    .btn{
+    &-btn{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
 
+    .btn{
         background: transparent ;
         height: 40px;
         width: 140px;
@@ -20,39 +26,18 @@ $layout-name: "home";
         box-shadow: #0d1c4a;
         font-family: 'Sarala', sans-serif;
         font-size: 24px;
-        font-weight: 400px;
+        font-weight: 400;
         color: azure;
-        transform: translateY(-100px);
 
         &:hover{
         background: #16005c;
-        transition: 0,5s;
-
+        transition: 1s;
             }
         }    
         .fa-angle-down{
             font-size: 60pt;
             color: white;
-            transform: translate(-100px, -20px);
             animation: flutuando 2s ease-in-out infinite;
             }   
-}
-
-
-// ===== MEDIA QUERY =====
-@media (max-width: 1120px){
-    .left, .right {
-        float: none;
-        margin: 0 50px 0 50px;
-        
-    }
-
-    .sobre-content{
-        justify-content: center;
-        align-items: center;
-    }
-    
-    .sobre{
-        height: 129vh;
-    }
+        }
 }
