--- a/css/layout/_sobre.scss
+++ b/css/layout/_sobre.scss
@@ -34,6 +34,7 @@ $layout-name: "sobre";
         .sobre-content{
             display: flex;
             flex-wrap: wrap;
+            color: white;
 
             .left{
                 float: left;
@@ -48,7 +49,6 @@ $layout-name: "sobre";
                     width: 500px;
                 
                 }
-
 
             }
 
@@ -72,4 +72,4 @@ $layout-name: "sobre";
                 }
             }
         }
-}
+    }
