--- a/css/style.scss
+++ b/css/style.scss
@@ -1,12 +1,18 @@
+@import 'variaveis/variaveis';
 @import "layout/header";
-@import "layout/sobre";
 @import "layout/home";
+@import "layout/sobre";
+@import "layout/contato";
+@import "component/c-button";
+@import "component/c-card";
+@import "component/c-menu";
+
+
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: white;
 }
 
 a{
@@ -17,25 +23,30 @@ a{
 /* ===KEYFRAMES=== */
 @keyframes flutuando{
      0%{
-        transform: translate(-100px, -20px);
+        transform: translate(0px, 0px);
      }
      50%{
-        transform: translate(-100px, 0px);
+        transform: translate(0px, -15px);
      }
      100%{
-        transform: translate(-100px, -20px);
+        transform: translate(0px, 0px);
      }
 }
 
+// ===== MEDIA QUERY =====
+@media (max-width: 1120px){
+   .left, .right {
+       float: none;
+       margin: 0 50px 0 50px;
+       
+   }
 
-
-
-
-
-
-
-/* ===== CONTATO ===== */
-.contato{
-    height: 100vh;
-    width: 100%;
+   .sobre-content{
+       justify-content: center;
+       align-items: center;
+   }
+   
+   .sobre{
+       height: 129vh;
+   }
 }
