terminou seção sobre e ajeitando bugs

--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -5,6 +5,7 @@ $layout-name: "navegacao-principal";
         position: fixed;
         width: 100%;
         height: 8vh;
+        z-index: 2;
 
         .navegacao-container{
             display: flex;
