--- a/css/style.scss
+++ b/css/style.scss
@@ -2,10 +2,12 @@
 @import "layout/header";
 @import "layout/home";
 @import "layout/sobre";
+@import "layout/projetos";
 @import "layout/contato";
 @import "component/c-button";
 @import "component/c-card";
 @import "component/c-menu";
+
 
 
 
