--- a/css/layout/_contato.scss
+++ b/css/layout/_contato.scss
@@ -5,6 +5,30 @@ $layout-name: "contato";
     min-height: 120vh;
     width: 100%;
     display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    .contato-titulo{
+        width: 100%;
+        height: 10vh;
+        margin-top: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        h2{
+            color: white;
+            text-align: center;
+            font-size: 30pt;
+            text-transform: uppercase;
+        }
+        .linha{
+            width: 70px;
+            height: 4px;
+            background: white;
+        }
+    }
 
     .l-main{
         background: $cor-white;
@@ -14,7 +38,7 @@ $layout-name: "contato";
         padding: $mobile-size * 2;
         position: relative;
         display: flex;
-        margin: auto;
+        margin: 50px auto 50px auto;
         box-shadow: 0 0 15px rgba(0, 0, 0, 0.15), 0 0 30px rgba(0, 0, 0, 0.1);
     }
 }
