--- a/css/layout/_sobre.scss
+++ b/css/layout/_sobre.scss
@@ -7,6 +7,7 @@ $layout-name: "sobre";
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     .sobre-titulo{
         width: 100%;
@@ -32,12 +33,14 @@ $layout-name: "sobre";
         }
     }
         .sobre-content{
+            height: 100%;
+            width: 100%;
             display: flex;
             flex-wrap: wrap;
             color: white;
+            justify-content: space-around;
 
             .left{
-                float: left;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
@@ -53,14 +56,12 @@ $layout-name: "sobre";
             }
 
             .right{
-                float: right;
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
                 width: 500px;
                 height: 450px;
-                margin-left: 100px;
 
                 h2{
                     transform: translateY(100px);
