--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .sobre .sobre-titulo {
@@ -163,16 +166,19 @@
 }
 
 .sobre .sobre-content {
+  height: 100%;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   color: white;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .sobre .sobre-content .left {
-  float: left;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -195,7 +201,6 @@
 }
 
 .sobre .sobre-content .right {
-  float: right;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -211,7 +216,6 @@
           justify-content: center;
   width: 500px;
   height: 450px;
-  margin-left: 100px;
 }
 
 .sobre .sobre-content .right h2 {
@@ -222,6 +226,120 @@
 
 .sobre .sobre-content .right p {
   margin-top: 225px;
+}
+
+.habilidades-sessao {
+  height: 100vh;
+}
+
+.habilidades-sessao .habilidades-titulo {
+  margin-top: 200px;
+  width: 100%;
+  height: 10vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.habilidades-sessao .habilidades-titulo h2 {
+  color: black;
+  text-align: center;
+  font-size: 30pt;
+  text-transform: uppercase;
+}
+
+.habilidades-sessao .habilidades-titulo .linha {
+  width: 70px;
+  height: 4px;
+  background: black;
+}
+
+.habilidades-sessao .conhecimentos {
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[16];
+      grid-template-columns: repeat(16, 1fr);
+  -ms-grid-rows: (6rem)[6];
+      grid-template-rows: repeat(6, 6rem);
+  row-gap: 0.5rem;
+}
+
+.habilidades-sessao .conhecimento:nth-child(1) {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 3;
+  grid-column: 4/7;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+}
+
+.habilidades-sessao .conhecimento:nth-child(2) {
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 3;
+  grid-column: 3/6;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 2;
+  grid-row: 3/5;
+}
+
+.habilidades-sessao .conhecimento:nth-child(3) {
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 3;
+  grid-column: 4/7;
+  grid-row: 5/-1;
+}
+
+.habilidades-sessao .conhecimento:nth-child(4) {
+  -ms-grid-column: 11;
+  -ms-grid-column-span: 3;
+  grid-column: 11/14;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+}
+
+.habilidades-sessao .conhecimento:nth-child(5) {
+  -ms-grid-column: 12;
+  -ms-grid-column-span: 3;
+  grid-column: 12/15;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 2;
+  grid-row: 3/5;
+}
+
+.habilidades-sessao .conhecimento:nth-child(6) {
+  -ms-grid-column: 11;
+  -ms-grid-column-span: 3;
+  grid-column: 11/14;
+  grid-row: 5/-1;
+}
+
+.habilidades-sessao .conhecimentos-img {
+  -ms-grid-column: 7;
+  -ms-grid-column-span: 4;
+  grid-column: 7/11;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 4;
+  grid-row: 2/6;
+  width: 80%;
+  height: 80%;
+}
+
+.habilidades-sessao .conhecimentos-img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
 }
 
 .projetos {
@@ -287,6 +405,7 @@
       flex-wrap: wrap;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  height: 100%;
 }
 
 .projetos .projetos-container .projetos-img1 {
@@ -677,6 +796,18 @@ a {
   }
   .sobre {
     height: 129vh;
+  }
+}
+
+@media (max-width: 1799px) {
+  .projetos {
+    height: 150vh;
+  }
+}
+
+@media (max-width: 1199px) {
+  .projetos {
+    height: 200vh;
   }
 }
 /*# sourceMappingURL=style.css.map */
