--- a/css/style.scss
+++ b/css/style.scss
@@ -2,6 +2,7 @@
 @import "layout/header";
 @import "layout/home";
 @import "layout/sobre";
+@import "layout/habilidades";
 @import "layout/projetos";
 @import "layout/contato";
 @import "component/c-button";
@@ -51,4 +52,16 @@ a{
    .sobre{
        height: 129vh;
    }
+}
+
+@media(max-width: 1799px){
+    .projetos{
+        height: 150vh;
+    }
+}
+
+@media (max-width:1199px) {
+    .projetos{
+        height: 200vh;
+    }
 }
