--- a/css/layout/_habilidades.scss
+++ b/css/layout/_habilidades.scss
@@ -1,10 +1,9 @@
 $layout-name: "habilidades-sessao";
 
 .#{$layout-name} {
-    height: 100vh;
+    height: 110vh;
 
     .habilidades-titulo{
-        margin-top: 200px;
         width: 100%;
         height: 10vh;
         display: flex;
@@ -32,7 +31,27 @@ $layout-name: "habilidades-sessao";
         grid-template-columns: repeat(16,1fr);
         grid-template-rows: repeat(6,6rem);
         row-gap: 0.5rem;
+
+    .conhecimento{
+        .conhecimento-header{
+            display: flex;
+            align-items: center;
+            color: #4b4b4b;
+
+            i {
+                font-size: 2.5rem;
+              }
+            h3 {
+                font-family: var(--font-secundary);
+                font-size: 2rem;
+                padding-left: 1rem;
+              }
+        }
+        .conhecimento-text{
+            margin-top: 1rem;
+        }
     }
+
     .conhecimento:nth-child(1){
         grid-column: 4/7;
         grid-row: 1/3;
@@ -58,15 +77,16 @@ $layout-name: "habilidades-sessao";
         grid-row: 5/-1;
     }
 
-    .conhecimentos-img{
-        grid-column: 7/11;
-        grid-row: 2/6;
-        width: 80%;
-        height: 80%;
+    // .conhecimentos-img{
+    //     grid-column: 7/11;
+    //     grid-row: 2/6;
+    //     width: 80%;
+    //     height: 80%;
 
-        img{
-            object-fit: cover;
-            height: 100%;
-        }
+    //     img{
+    //         object-fit: cover;
+    //         height: 100%;
+    //     }
+    // }
     }
 }
