--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@
 }
 
 .sobre {
-  height: 70vh;
+  height: 100vh;
   width: 100%;
   background: black;
   display: -webkit-box;
@@ -229,11 +229,10 @@
 }
 
 .habilidades-sessao {
-  height: 100vh;
+  height: 110vh;
 }
 
 .habilidades-sessao .habilidades-titulo {
-  margin-top: 200px;
   width: 100%;
   height: 10vh;
   display: -webkit-box;
@@ -275,7 +274,31 @@
   row-gap: 0.5rem;
 }
 
-.habilidades-sessao .conhecimento:nth-child(1) {
+.habilidades-sessao .conhecimentos .conhecimento .conhecimento-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #4b4b4b;
+}
+
+.habilidades-sessao .conhecimentos .conhecimento .conhecimento-header i {
+  font-size: 2.5rem;
+}
+
+.habilidades-sessao .conhecimentos .conhecimento .conhecimento-header h3 {
+  font-family: var(--font-secundary);
+  font-size: 2rem;
+  padding-left: 1rem;
+}
+
+.habilidades-sessao .conhecimentos .conhecimento .conhecimento-text {
+  margin-top: 1rem;
+}
+
+.habilidades-sessao .conhecimentos .conhecimento:nth-child(1) {
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-column: 4/7;
@@ -284,7 +307,7 @@
   grid-row: 1/3;
 }
 
-.habilidades-sessao .conhecimento:nth-child(2) {
+.habilidades-sessao .conhecimentos .conhecimento:nth-child(2) {
   -ms-grid-column: 3;
   -ms-grid-column-span: 3;
   grid-column: 3/6;
@@ -293,14 +316,14 @@
   grid-row: 3/5;
 }
 
-.habilidades-sessao .conhecimento:nth-child(3) {
+.habilidades-sessao .conhecimentos .conhecimento:nth-child(3) {
   -ms-grid-column: 4;
   -ms-grid-column-span: 3;
   grid-column: 4/7;
   grid-row: 5/-1;
 }
 
-.habilidades-sessao .conhecimento:nth-child(4) {
+.habilidades-sessao .conhecimentos .conhecimento:nth-child(4) {
   -ms-grid-column: 11;
   -ms-grid-column-span: 3;
   grid-column: 11/14;
@@ -309,7 +332,7 @@
   grid-row: 1/3;
 }
 
-.habilidades-sessao .conhecimento:nth-child(5) {
+.habilidades-sessao .conhecimentos .conhecimento:nth-child(5) {
   -ms-grid-column: 12;
   -ms-grid-column-span: 3;
   grid-column: 12/15;
@@ -318,28 +341,11 @@
   grid-row: 3/5;
 }
 
-.habilidades-sessao .conhecimento:nth-child(6) {
+.habilidades-sessao .conhecimentos .conhecimento:nth-child(6) {
   -ms-grid-column: 11;
   -ms-grid-column-span: 3;
   grid-column: 11/14;
   grid-row: 5/-1;
-}
-
-.habilidades-sessao .conhecimentos-img {
-  -ms-grid-column: 7;
-  -ms-grid-column-span: 4;
-  grid-column: 7/11;
-  -ms-grid-row: 2;
-  -ms-grid-row-span: 4;
-  grid-row: 2/6;
-  width: 80%;
-  height: 80%;
-}
-
-.habilidades-sessao .conhecimentos-img img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: 100%;
 }
 
 .projetos {
@@ -362,7 +368,6 @@
 }
 
 .projetos .projetos-titulo {
-  margin-top: 200px;
   width: 100%;
   height: 10vh;
   display: -webkit-box;
@@ -406,6 +411,7 @@
   -ms-flex-pack: distribute;
       justify-content: space-around;
   height: 100%;
+  width: 100%;
 }
 
 .projetos .projetos-container .projetos-img1 {
@@ -487,7 +493,7 @@
 
 .contato {
   background: black;
-  min-height: 120vh;
+  min-height: 100vh;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -504,7 +510,6 @@
 .contato .contato-titulo {
   width: 100%;
   height: 10vh;
-  margin-top: 100px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -782,18 +787,6 @@ a {
 }
 
 @media (max-width: 1120px) {
-  .left, .right {
-    float: none;
-    margin: 0 50px 0 50px;
-  }
-  .sobre-content {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
   .sobre {
     height: 129vh;
   }
@@ -801,13 +794,13 @@ a {
 
 @media (max-width: 1799px) {
   .projetos {
-    height: 150vh;
+    height: 200vh;
   }
 }
 
 @media (max-width: 1199px) {
   .projetos {
-    height: 200vh;
+    height: 250vh;
   }
 }
 /*# sourceMappingURL=style.css.map */
