--- a/css/layout/_contato.scss
+++ b/css/layout/_contato.scss
@@ -1,33 +1,12 @@
 $layout-name: "contato";
 
 .#{$layout-name} {
-    background: black;
+    background: #252934;
     min-height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
-
-    .contato-titulo{
-        width: 100%;
-        height: 10vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        h2{
-            color: white;
-            text-align: center;
-            font-size: 30pt;
-            text-transform: uppercase;
-        }
-        .linha{
-            width: 70px;
-            height: 4px;
-            background: white;
-        }
-    }
 
     .l-main{
         background: $cor-white;
