--- a/css/layout/_habilidades.scss
+++ b/css/layout/_habilidades.scss
@@ -2,30 +2,8 @@ $layout-name: "habilidades-sessao";
 
 .#{$layout-name} {
     height: 110vh;
-    background: black;
-
-    .habilidades-titulo{
-        width: 100%;
-        height: 10vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        
-      
-
-        h2{
-            color: #fff;
-            text-align: center;
-            font-size: 30pt;
-            text-transform: uppercase;
-        }
-    .linha{
-        width: 70px;
-        height: 4px;
-        background: white;
-    }
-    }
+    background: #252934;
+    
     .conhecimentos{
         height: 100%;
         display: grid;
