--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -12,7 +12,7 @@ $layout-name: "navegacao-principal";
             justify-content: space-around;
             align-items: center;
             height: 10vh;
-            background: #33d54e;
+            background: black;
             color: white;
 
             .navegacao-container-foto{
