--- a/css/layout/_sobre.scss
+++ b/css/layout/_sobre.scss
@@ -1,7 +1,6 @@
 $layout-name: "sobre";
 
 .#{$layout-name} {
-    height: 100vh;
     width: 100%;
     background: black;
     display: flex;
@@ -10,44 +9,37 @@ $layout-name: "sobre";
     justify-content: center;
 
         .sobre-content{
-            height: 100%;
             width: 100%;
             display: flex;
             flex-wrap: wrap;
             color: white;
             justify-content: space-around;
+            flex-direction: row;
 
-            .left{
+            .sobre-card{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
                 width: 500px;
-                height: 450px;
+                margin:  2.5rem 2.5rem 0 2.5rem;
 
                 img{
-                    width: 500px;
-                
+                    height: 200px;
+                    width: 50%;
+                    border-radius: 50%;
                 }
 
-            }
-
-            .right{
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                width: 500px;
-                height: 450px;
+                p{
+                    margin: 2.5rem 0 5rem 0 ;
+                }
 
                 h2{
-                    transform: translateY(100px);
-                    font-size: 30pt;
-                }
-
-                 p{
-                        margin-top: 225px;
+                    margin-top: 1.5rem;
                 }
             }
+            
         }
     }
+    // font-size: 2.5rem;
+    // margin-bottom: 2.5rem;
